Fixed some alignment

--- a/frontend/src/components/CTF/CTF.module.scss
+++ b/frontend/src/components/CTF/CTF.module.scss
@@ -62,7 +62,12 @@
                     margin-bottom: 1rem;
 
                     p {
-                        padding-right: 2rem;
+                        flex: 1;
+                        padding-right: 1.5rem;
+                    }
+
+                    input {
+                        flex: 3;
                     }
                 }
 
